IJ-79 - Marign auto fix, fixed icons getting cut off
Organised the navbar on mobile with center alignment.
Changed px -> rem.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -56,18 +56,30 @@
 }
 
 nav.navbar {
+  text-align: center;
+
+  .navbar-right-buttons{
+    margin-right: auto;
+    margin-left: auto;
+    @media (min-width: 576px) {
+      margin-right: 0;
+      min-width: 364px;
+    }
+  }
+
+
   .navbar-items {
     overflow: hidden;
-    max-width: 480px;
-    max-height: 48px;
+    max-height: 44px;
 
     .btn {
-      max-height: 38px;
+      width: 11rem;
     }
 
     @media (min-width: 576px) {
       .btn {
         margin: 0.15rem;
+        width: auto;
 
         .nav-label {
           display: none;
